--- a/Templates/appointments/book_appointment.html
+++ b/Templates/appointments/book_appointment.html
@@ -1,6 +1,9 @@
 {% extends 'patients/base.html' %}
 
 {% block content %}
+<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/flatpickr/dist/flatpickr.min.css">
+<script src="https://cdn.jsdelivr.net/npm/flatpickr"></script>
+
 <div class="container my-5">
     <h2 class="text-primary mb-4">Book an Appointment</h2>
     <form method="post" class="mb-4">
@@ -20,5 +23,18 @@
     <br>
 </div>
 <br>
+
+<script>
+    document.addEventListener("DOMContentLoaded", function () {
+        flatpickr("#date-picker", {
+            dateFormat: "Y-m-d",
+        });
+        flatpickr("#time-picker", {
+            enableTime: true,
+            noCalendar: true,
+            dateFormat: "H:i",
+        });
+    });
+</script>
 {% endblock %}
 
