--- a/Templates/staff/staff_certifications.html
+++ b/Templates/staff/staff_certifications.html
@@ -1,4 +1,4 @@
-{% extends 'base_generic.html' %}
+{% extends 'staff/base.html' %}
 
 {% block content %}
   <h1>{{ staff.first_name }} {{ staff.last_name }}'s Certifications</h1>
