--- a/Templates/staff/staff_list.html
+++ b/Templates/staff/staff_list.html
@@ -1,13 +1,13 @@
-{% extends 'base_generic.html' %}
+{% extends 'staff/base.html' %}
 
 {% block content %}
   <h1>Staff Members</h1>
   <ul>
     {% for staff_member in staff %}
       <li>
-        <h3>{{ staff_member.first_name }} {{ staff_member.last_name }}</h3>
+        <h3>{{ staff_member.user.username }} | Role: {{ staff_member.role }}</h3>
         <p>{{ staff_member.job_title }}</p>
-        <p>Email: {{ staff_member.email }}</p>
+        <p>Email: {{ staff_member.user.email }}</p>
         <p>Phone: {{ staff_member.phone_number }}</p>
       </li>
     {% endfor %}
