--- a/Templates/staff/nurse_dashboard.html
+++ b/Templates/staff/nurse_dashboard.html
@@ -13,6 +13,7 @@
     <!-- Figure our what will be on this dashboard since i have updated it -->
 
     <ul>
+        <li><a href="{% url 'appointments:book_appointment' %}" class="btn btn-primary">View Appointments</a></li>
         <li><a href="{% url 'staff:view_lab_tests' patient_id=1 %}">View Lab Tests</a></li>
         <li><a href="{% url 'staff:team_collaboration' patient_id=1 %}">Team Collaboration</a></li>
         <li><a href="{% url 'staff:emergency_alert_list' %}">Emergency Alerts</a></li>
