--- a/Templates/patients/report_list.html
+++ b/Templates/patients/report_list.html
@@ -1,9 +1,8 @@
-{% extends 'staff/base.html' %}
+{% extends 'patients/base.html' %}
 
 {% block content %}
 <div class="container mt-4">
-    <h2>Reports for {{ patient.first_name }} {{ patient.last_name }}</h2>
-    <a href="{% url 'staff:create_report' patient.id %}" class="btn btn-success mb-3">Create New Report</a>
+    <h2>My Reports</h2>
     <table class="table table-bordered">
         <thead>
             <tr>
@@ -20,8 +19,8 @@
                 <td>{{ report.get_report_type_display }}</td>
                 <td>{{ report.generated_at }}</td>
                 <td>
-                    <a href="{% url 'staff:report_detail' report.id %}" class="btn btn-info btn-sm">View</a>
-                    <a href="{% url 'staff:download_report' report.id %}" class="btn btn-secondary btn-sm">Download</a>
+                    <a href="{% url 'patients:report_detail' report.id %}" class="btn btn-info btn-sm">View</a>
+                    <a href="{% url 'patients:download_report' report.id %}" class="btn btn-secondary btn-sm">Download</a>
                 </td>
             </tr>
             {% endfor %}
